log
Thu 24 Aug 2023 08:43:58 PM UTC: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:3: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   34 |   list->head==NULL;
      |   ^~~~
      |   List
list.c:34:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:9: error: unused variable ‘movies’ [-Werror=unused-variable]
   32 |   List* movies= (List*) malloc(sizeof(List));
      |         ^~~~~~
list.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
635e0c8
Thu 24 Aug 2023 08:44:50 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:15: error: statement with no effect [-Werror=unused-value]
   34 |   movies->head==NULL;
      |               ^
list.c:35:18: error: statement with no effect [-Werror=unused-value]
   35 |   movies->current==NULL;
      |                  ^
list.c:34:9: error: ‘*movies.head’ is used uninitialized [-Werror=uninitialized]
   34 |   movies->head==NULL;
      |   ~~~~~~^~~~~~
list.c:35:9: error: ‘*movies.current’ is used uninitialized [-Werror=uninitialized]
   35 |   movies->current==NULL;
      |   ~~~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
53e10cd
